CodeSamples/Kubernetes/networkpolicy/anurag-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod
  namespace: anurag-space
spec: 
  containers:
  - image: nginx
    name: nginx-container
    ports: 
    - containerPort: 80

  # http://10.244.1.86/
    # 10-244-1-86.default.pod.cluster.local
 # 10.244.0.163  
 #10-244-0-163.anurag-space.pod.cluster.local
