CodeSamples/Kubernetes/networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: default
spec:
  ingress: 
  - from:
    - ipBlock:
        cidr: 10.244.0.49/32
    ports: 
    - port: 80
  - from:
    - ipBlock:
        cidr: 10.244.0.201/32   
    ports: 
    - port: 80      
  podSelector:
    matchLabels:
      papa: dhondhu
